[gd_scene load_steps=5 format=4 uid="uid://c16b4m038mttq"]

[ext_resource type="PackedScene" uid="uid://d2ad2c6jamqv7" path="res://machines/drone_station.tscn" id="1_d48rs"]
[ext_resource type="Script" path="res://machines/collector_drone_station.gd" id="2_32ema"]
[ext_resource type="Material" uid="uid://cwhxp50x2ma0u" path="res://assets/meshes/materials/collector_station.tres" id="3_v7dhr"]

[sub_resource type="ArrayMesh" id="ArrayMesh_2cvoh"]
_surfaces = [{
"aabb": AABB(-2.20313, -0.015625, -1.53125, 4.43125, 3.76563, 3.125),
"attribute_data": PackedByteArray("/8//b//P/3f/x/9v/8f/d//P/4//z/+X/8f/j//H/5f/x/+n/8f/n//P/6f/z/+f/8f/r//H/7f/z/+v/8//t//P/3//z/+H/8f/f//H/4f/z/9f/8//Z//H/1//x/9n/2P/F/9j/yv/T/8X/0//K/9T/1f/U/9r/z//V/8//2v/Z/+r/2f/l/9r/6v/a/+X/58AAP+f/xP/owAA/6P/E/9b/5f/W/+r/1f/l/9X/6v/K/+X/yv/q/8n/5f/J/+r/5v/b/+b/3P/f/9v/3//c/8r/4f/K/+L/w//h/8P/4sAAP8bAAAAAP8b/xv/GwAAAAD/JwAA/0P/G/8n/xv/Q/+b/3//m/+D/3//f/9//4P/m/9f/5v/Y/9//1//f/9j/3P/V/9z/2v/X/9X/1//a/8r/2f/K/97/xf/Z/8X/3v/l/+z/5f/n/+b/7P/m/+f/w//p/8P/7v/E/+n/xP/u/+L/5//i/+z/4f/n/+H/7P/e/+f/3v/s/93/5//d/+z/6v/X/+r/3P/p/9f/6f/c/+r/3//q/+T/6f/f/+n/5P/V/+L/1f/h/9z/4v/c/+H/3//j/9//5P/m/+P/5v/k/9D/x//Q/8z/yf/H/8n/zP/QwAA/0P/E/8nAAD/J/8T/5cAAP+X/wf/dwAA/3f/B/9f/z//X/9P/z//P/8//0//N/8//zf/X/8n/z//J/9f/w//l/8P/5//Hf+f/6X/L/+X/zf/pf83/3f/d/93/3//V/93/1f/f/9vAAD/b/8P/08AAP9P/w//D/9P/w//bwAA/08AAP9v/5f/P/+X/0f/pf9H/6X/T/+X/1f/pf9X/wdbeP8HdKD+A/93AADln/8/W3j/P3Sg/jv/d/835Z//t/8f/7f/J/+v/x//r/8n/7f/L/+3/zf/r/8v/6//N/93Wxj/d3VA/nP/F/9v5j//T1t4/090oP5L/3f/R+Wf/zf/r/8//6//N/+3/z//t/+v/z//t/8//6//R/+3/0f/R/+v/0//r/9H/7f/T/+3/6//T/+3/0//r/9X/7f/V5mL/y+ZizI7mYn/MZmJMjmZi8xImYv/U5mJzEqZif9RZYAyO2WCMjllgMxIZYLMSmWA/y9lgv8xZYD/U2WC/1H/r/+3/6f/t/+v/6//p/+v/yf/v/8f/7//J/+3/x//t/9f/7//V/+//1//t/9X/7f/v/9n/7f/Z/+//1//t/9f/6f/H/+n/yf/n/8f/5//J/8H/6//B/+3AAD/rwAA/7f/r/8H/68AAP+3/wf/twAA/6//D/+v/xf/t/8P/7f/F/+v/5//r/+n/6f/n/+n/6f/H/9P/x//V/8X/0//F/9X/7//b/+//3f/t/9v/7f/d/+//4//v/+X/7f/j/+3/5f/t/+n/7f/n/+//6f/v/+f/7f/r/+3/7f/v/+v/7//t/+//3//v/+H/7f/f/+3/4f/b/+3/2//v/9n/7f/Z/+//8cAAP/H/wf/vwAA/7//B//H/x//x/8n/7//H/+//yf/L//H/y//v/83/8f/N/+//7//L/+//zf/x/8v/8f/N//H/w//x/8X/7//D/+//xf/B/+//wf/xwAA/78AAP/H/8f/P//H/0f/v/8//7//R/9//7//f//H/3f/v/93/8f/h//H/4f/v/+P/8f/j/+//5f/v/+X/8f/n/+//5//x//H/0//x/9X/7//T/+//1f/R/+//0f/x/8//7//P//H/7//v/+//8f/t/+//7f/x/8n/8f/J//P/x//x/8f/8//T//P/0//x/9X/8//V//H/1//x/9f/8//Z//H/2f/z/8X/8f/F//P/w//x/8P/8//r/+//6//x/+n/7//p//H/wH/z/8B/9cAAP/PAAD/1//R/w//0f8X/8//D//P/xf/x//B/8f/v//b/8H/2/+//88AAP/P/wH/4wAA/+P/Af+T/x//k/8n/3//H/9//yf/k/8P/5P/F/9//w//f/8X"),
"format": 34896613399,
"index_count": 576,
"index_data": PackedByteArray("AAABAAIAAgABAAMABAAFAAYABgAFAAcACAAJAAoACgAJAAsADAANAA4ADgANAA8AEAARABIAEgARABMAFAAVABYAFgAVABcAGAAZABoAGgAZABsAHAAdAB4AHgAdAB8AIAAhACIAIgAhACMAJAAlACYAJgAlACcAKAApACoAKgApACsALAAtAC4ALgAtAC8AMAAxADIAMgAxADMANAA1ADYANgA1ADcAOAA5ADoAOgA5ADsAPAA9AD4APgA9AD8AQABBAEIAQgBBAEMARABFAEYARgBFAEcASABJAEoASgBJAEsATABNAE4ATgBNAE8AUABRAFIAUgBRAFMAVABVAFYAVgBVAFcAWABZAFoAWgBZAFsAXABdAF4AXgBdAF8AYABhAGIAYgBhAGMAZABlAGYAZgBlAGcAaABpAGoAagBpAGsAbABtAG4AbgBtAG8AcABxAHIAcgBxAHMAdAB1AHYAdgB1AHcAeAB5AHoAegB5AHsAfAB9AH4AfgB9AH8AgACBAIIAggCBAIMAhACFAIYAhwCIAIkAigCLAIwAjACLAI0AjgCPAJAAkACPAJEAkgCTAJQAlACTAJUAlgCXAJgAmQCaAJsAnACdAJ4AngCdAJ8AoAChAKIAogChAKMApAClAKYApgClAKcAqACpAKoAqgCpAKsArACtAK4ArgCtAK8AsACxALIAsgCxALMAtAC1ALYAtgC1ALcAuAC5ALoAugC5ALsAvAC9AL4AvgC9AL8AwADBAMIAwgDBAMMAxADFAMYAxgDFAMcAyADJAMoAygDJAMsAxQDMAMcAxwDMAM0AzgDIAM8AzwDIAMoA0ADEANEA0QDEAMYAyQDSAMsAywDSANMAzADQAM0AzQDQANEA0gDOANMA0wDOAM8A1ADVANYA1gDVANcA2ADZANoA2gDZANsA3ADdAN4A3gDdAN8A4ADhAOIA4gDhAOMA5ADlAOYA5gDlAOcA6ADpAOoA6gDpAOsA7ADtAO4A7gDtAO8A8ADxAPIA8gDxAPMA9AD1APYA9gD1APcA+AD5APoA+gD5APsA/AD9AP4A/gD9AP8AAAEBAQIBAgEBAQMBBAEFAQYBBgEFAQcBCAEJAQoBCgEJAQsBDAENAQ4BDgENAQ8BEAERARIBEgERARMBFAEVARYBFgEVARcBGAEZARoBGgEZARsBHAEdAR4BHgEdAR8BIAEhASIBIgEhASMBJAElASYBJgElAScBKAEpASoBKgEpASsBLAEtAS4BLgEtAS8BMAExATIBMgExATMBNAE1ATYBNgE1ATcBOAE5AToBOgE5ATsBPAE9AT4BPgE9AT8BQAFBAUIBQgFBAUMBRAFFAUYBRgFFAUcBSAFJAUoBSgFJAUsBTAFNAU4BTgFNAU8BUAFRAVIBUgFRAVMBVAFVAVYBVgFVAVcBWAFZAVoBWgFZAVsBXAFdAV4BXgFdAV8BYAFhAWIBYgFhAWMBZAFlAWYBZgFlAWcBaAFpAWoBagFpAWsBbAFtAW4BbgFtAW8BcAFxAXIBcgFxAXMB"),
"material": ExtResource("3_v7dhr"),
"name": "m_8de2442f-46e6-9ac2-5dce-79b88df7eb55",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 372,
"vertex_data": PackedByteArray("YyvCMP9//79jKwAA/3//v2MrwjD/v/+/YysAAP+//78AAMIw/7//vwAAAAD/v/+/AADCMP9//78AAAAA/3//v2MrwjD/f///YyvCMP+///8AAMIw/3///wAAwjD/v///YysAAP+/AABjKwAA/38AAAAAAAD/vwAAAAAAAP9/AABjK8Iw/78AgGMrAAD/vwCAAADCMP+/AIAAAAAA/78AgAAAwjD/f///AAAAAP9///9jK8Iw/3///2MrAAD/f///FUHnef8f/78VQQAA/x//vxVB53n/v/+/FUEAAP+//79jK+d5/7//v2MrAAD/v/+/Yyvnef8f/79jKwAA/x//vxVB53n/H///FUHnef+///9jK+d5/x///2Mr53n/v///FUEAAP+/AAAVQQAA/x8AAGMrAAD/vwAAYysAAP8fAAAVQed5/78AgBVBAAD/vwCAYyvnef+/AIBjKwAA/78AgGMr53n/H///YysAAP8f//8VQed5/x///xVBAAD/H///QMNIkgAA/79Aw+d5AAD/v0DDSJL/3/+/QMPnef/f/79jK0iS/9//v2Mr53n/3/+/YytIkgAA/79jK+d5AAD/v0DDSJIAAP//QMNIkv/f//9jK0iSAAD//2MrSJL/3///QMPnef/fAABAw+d5AAAAAGMr53n/3wAAYyvneQAAAABAw0iS/98AgEDD53n/3wCAYytIkv/fAIBjK+d5/98AgGMrSJIAAP//YyvneQAA//9Aw0iSAAD//0DD53kAAP//QMPnef8f/79AwwAA/x//v0DD53n/v/+/QMMAAP+//7+Ored5/7//v46tAAD/v/+/jq3nef8f/7+OrQAA/x//v0DD53n/H///QMPnef+///+Ored5/x///46t53n/v///QMMAAP+/AABAwwAA/x8AAI6tAAD/vwAAjq0AAP8fAABAw+d5/78AgEDDAAD/vwCAjq3nef+/AICOrQAA/78AgI6t53n/H///jq0AAP8f//9Aw+d5/x///0DDAAD/H///QMPneQAA/79AwwAAAAD/v0DD53n/H/+/QMMAAP8f/79jK+d5/x//v2MrAAD/H/+/YyvneQAA/79jKwAAAAD/v0DD53kAAP//QMPnef8f//9jK+d5AAD//2Mr53n/H///QMMAAP8fAABAwwAAAAAAAGMrAAD/HwAAYysAAAAAAABAw+d5/x8AgEDDAAD/HwCAYyvnef8fAIBjKwAA/x8AgGMr53kAAP//YysAAAAA//9Aw+d5AAD//0DDAAAAAP//UXcLwwAA/79Rd0iSAAD/v1F3C8P/3/+/UXdIkv/f/79RdwvD/9+7ymMrSJL/37vKUXcLwwAAu8pjK0iSAAC7ylF3SJL/3/+/UXdIkgAA/79jK0iS/9//v2MrSJIAAP+/UXcLw//fAABRd0iS/98AAGMrSJL/3wAAUXcLwwAAAABjK0iSAAAAAFF3SJIAAAAAQMMLwwAA/79Aw0iSAAD/v0DDC8P/3/+/QMNIkv/f/79AwwvD/9+7ylF3SJL/37vKQMMLwwAAu8pRd0iSAAC7ykDDSJL/3/+/QMNIkgAA/79Rd0iS/9//v1F3SJIAAP+/QMMLw//fAABAw0iS/98AAFF3SJL/3wAAQMMLwwAAAABRd0iSAAAAAEDDSJIAAAAAJvXO8/8/GMD//wAA/y8YwCb1zvOZeRjA//8AAJmJGMAZzs7zmXn/v0DDAACZif+/Gc7O8/8//79AwwAA/y//vyb1nef/P/+/JvWd55l5/78Zzp3n/z//vxnOneeZef+///8AAJmJ/7///wAA/y//v0DDAACZif+/QMMAAP8v/78m9c7zmXnxgv//AACZifGCGc7O85l58YJAwwAAmYnxghnOzvP/P/H/QMMAAP8v8f8m9c7z/z/x////AAD/L/H//////5mJ/7///////y//v///zvOZif+////O8/8v/7///////y///0DD////L//////O8/8v//9Aw87z/y///0DD////L/+/QMP//5mJ/79Aw87z/y//v0DDzvOZif+/QMP//5mJAID/////mYkAgEDDzvOZiQCA///O85mJAID//////y//v/////+Zif+/JvX///8//78m9f//mXn/v///zvOZif+////O8/8v/78m9c7zmXn/vyb1zvP/P/+/QMP//5mJ/78Zzv//mXn/v0DDzvOZif+/Gc7O85l5/79Aw////y//vxnO////P/+/QMPO8/8v/78Zzs7z/z//vyb1neeZef+/JvWd5/8//78m9f//mXn/vyb1////P/+/JvWd5/8/AIAZzp3n/z8AgCb1////PwCAGc7///8/AIAZzp3n/z//vxnOneeZef+/Gc7///8//78Zzv//mXn/vxnOneeZef//JvWd55l5//8Zzv//mXn//yb1//+Zef//3JfCMP8f/7/clwAA/x//v9yXwjD/X/+/3JcAAP9f/795bMIw/1//v3lsAAD/X/+/eWzCMP8f/795bAAA/x//v9yXwjD/H///3JfCMP9f//95bMIw/x///3lswjD/X///3JcAAP9fAADclwAA/x8AAHlsAAD/XwAAeWwAAP8fAADcl8Iw/18AgNyXAAD/XwCAeWzCMP9fAIB5bAAA/18AgHlswjD/H///eWwAAP8f///cl8Iw/x///9yXAAD/H///eWzCMP8//795bAAA/z//v3lswjD/f/+/eWwAAP9//78VQcIw/3//vxVBAAD/f/+/FUHCMP8//78VQQAA/z//v3lswjD/P///eWzCMP9///8VQcIw/z///xVBwjD/f///eWwAAP9/AAB5bAAA/z8AABVBAAD/fwAAFUEAAP8/AAB5bMIw/38AgHlsAAD/fwCAFUHCMP9/AIAVQQAA/38AgBVBwjD/P///FUEAAP8///95bMIw/z///3lsAAD/P///eWyFYf8f/795bMIw/x//v3lshWH/X/+/eWzCMP9f/78VQYVh/1//vxVBwjD/X/+/FUGFYf8f/78VQcIw/x//v3lshWH/H///eWyFYf9f//8VQYVh/x///xVBhWH/X///eWzCMP9fAAB5bMIw/x8AABVBwjD/XwAAFUHCMP8fAAB5bIVh/18AgHlswjD/XwCAFUGFYf9fAIAVQcIw/18AgBVBhWH/H///FUHCMP8f//95bIVh/x///3lswjD/H///y+PCMP+//7/L4wAA/7//v8vjwjD///+/y+MAAP///7+1osIw////v7WiAAD///+/taLCMP+//7+1ogAA/7//v8vjwjD/v///y+PCMP////+1osIw/7///7WiwjD/////y+MAAP//AADL4wAA/78AALWiAAD//wAAtaIAAP+/AADL48Iw//8AgMvjAAD//wCAtaLCMP//AIC1ogAA//8AgLWiwjD/v///taIAAP+////L48Iw/7///8vjAAD/v///FUHCMP+//78VQQAA/7//vxVBwjD///+/FUEAAP///7+xFcIw////v7EVAAD///+/sRXCMP+//7+xFQAA/7//vxVBwjD/v///FUHCMP////+xFcIw/7///7EVwjD/////FUEAAP//AAAVQQAA/78AALEVAAD//wAAsRUAAP+/AAAVQcIw//8AgBVBAAD//wCAsRXCMP//AICxFQAA//8AgLEVwjD/v///sRUAAP+///8VQcIw/7///xVBAAD/v///jq3nef+//7+OrSRJ/7//v46t53llxv+/jq0kSWXG/78VQed5Zcb/vxVBJEllxv+/FUHnef+//78VQSRJ/7//v46t53n/v///jq3neWXG//8VQed5/7///xVB53llxv//jq0kSWXGAACOrSRJ/78AABVBJEllxgAAFUEkSf+/AACOred5ZcYAgI6tJEllxgCAFUHneWXGAIAVQSRJZcYAgBVB53n/v///FUEkSf+///+Ored5/7///46tJEn/v////38AAP9/AAD/fwAA/38AAP9/////f////3////9/////f/+//3//v/9//7//f/+//3//P/9//z//f/8//3//P/9/////f////3////9/////f////3////9/////f////38AAP9/AAD/fwAA/38AAP9/////f////3////9/////f/+//3//v/9//7//f/+//3//P/9//z//f/8//3//P/9/////f////3////9/////f////3////9/////f////38AAP9/AAD/fwAA/38AAP9/////f////3////9/////f/+//3//v/9//7//f/+//3//P/9//z//f/8//3//P/9/////f////3////9/////f////3////9/////f////38AAP9/AAD/fwAA/38AAP9/////f////3////9/////f/+//3//v/9//7//f/+//3//P/9//z//f/8//3//P/9/////f////3////9/////f////3////9/////f////38AAP9/AAD/fwAA/38AAP9/////f////3////9/////f/+//3//v/9//7//f/+//3//P/9//z//f/8//3//P/9/////f////3////9/////f////3////9/////f////38AAP9/AAD/fwAA/38AALuihrq7ooa6u6KGuruihroAAP9/AAD/fwAA/38AAP9//3//f/9//3//f/9/////f////3////9//38AAP9/AAD/fwAA/38AALuihrq7ooa6u6KGuruihroAAP9/AAD/fwAA/38AAP9//3//f/9//3//f/9/////f////3////9/W4ZlAFuGZQBbhmUAW4ZlAPiFoPn4haD5+IWg+fiFoPn///9/////f////3////9/AAD/fwAA/38AAP9/AAD/f2P+X0Nj/l9DY/5fQ2P+X0Pmgsf55oLH+eaCx/nmgsf5/38AAP9/AAD/fwAA/38AAP9/////f////3////9/////f////3////9/////f////3////9/////f////3///////3////9/////f////38AAP9/AAD/fwAA/38AAP9/////f////38AAP9/AAD/f////3////9/AAD/fwAA/3//f////3////9/////f////3////9/////f////3////9/AAD/fwAA/38AAP9/AAD/f////3////9/////f////38AAP9/AAD/fwAA/38AAP9/////f////3////9/////f/+//3//v/9//7//f/+//3//P/9//z//f/8//3//P/9/////f////3////9/////f////3////9/////f////38AAP9/AAD/fwAA/38AAP9/////f////3////9/////f/+//3//v/9//7//f/+//3//P/9//z//f/8//3//P/9/////f////3////9/////f////3////9/////f////38AAP9/AAD/fwAA/38AAP9/////f////3////9/////f/+//3//v/9//7//f/+//3//P/9//z//f/8//3//P/9/////f////3////9/////f////3////9/////f////38AAP9/AAD/fwAA/38AAP9/////f////3////9/////f/+//3//v/9//7//f/+//3//P/9//z//f/8//3//P/9/////f////3////9/////f////3////9/////f////38AAP9/AAD/fwAA/38AAP9/////f////3////9/////f/+//3//v/9//7//f/+//3//P/9//z//f/8//3//P/9/////f////3////9/////f////3////9/////f////38AAP9/AAD/fwAA/38AAP9/////f////3////9/////f/+//3//v/9//7//f/+//3//P/9//z//f/8//3//P/9/////f////3////9/////f////3////9/////f///")
}]
blend_shape_mode = 0

[node name="CollectorDroneStation" groups=["collector_drones"] instance=ExtResource("1_d48rs")]
script = ExtResource("2_32ema")

[node name="MachineMesh" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0952809, 0)
mesh = SubResource("ArrayMesh_2cvoh")
skeleton = NodePath("..")

[node name="UpdateWaitTimer" type="Timer" parent="." index="5"]
wait_time = 10.0
one_shot = true

[connection signal="timeout" from="UpdateWaitTimer" to="." method="update_drone_target"]

[editable path="GameLocation"]
[editable path="InteractionTrigger"]
